コードを記述

--- a/lecture-1/Python演習1.ipynb
+++ b/lecture-1/Python演習1.ipynb
@@ -31,12 +31,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "b34Yn70dal4y"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ecneicsatad\n"
+          ]
+        }
+      ],
+      "source": [
+        "def reverse_string(input_string):\n",
+        "    return input_string[::-1]\n",
+        "\n",
+        "original_string = \"datascience\"\n",
+        "reversed_string = reverse_string(original_string)\n",
+        "\n",
+        "print(reversed_string)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -51,12 +67,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "vMZAn2xLa-DI"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ヘルシンキ\n"
+          ]
+        }
+      ],
+      "source": [
+        "text = \"ヘエルスシトンニキア\"\n",
+        "indices = [0, 2, 4, 6, 8]\n",
+        "result = \"\"\n",
+        "\n",
+        "for i in indices:\n",
+        "    result += text[i]\n",
+        "\n",
+        "print(result)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -71,12 +104,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "96eYhROCbA20"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ヘエルスシトンニキア\n"
+          ]
+        }
+      ],
+      "source": [
+        "str1 = \"ヘルシンキ\"\n",
+        "str2 = \"エストニア\"\n",
+        "result = \"\"\n",
+        "\n",
+        "max_length = max(len(str1), len(str2))\n",
+        "\n",
+        "for i in range(max_length):\n",
+        "    if i < len(str1):\n",
+        "        result += str1[i]\n",
+        "    \n",
+        "    if i < len(str2):\n",
+        "        result += str2[i]\n",
+        "\n",
+        "print(result)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -91,12 +147,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "oUTnc-HwbEqP"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[9, 9, 5, 2, 3, 11, 6, 2, 8, 3, 3, 11]\n"
+          ]
+        }
+      ],
+      "source": [
+        "sentence = \"Character education based on the fundamental spirit of Buddhism and the Shiguzeigan\"\n",
+        "\n",
+        "words = sentence.split()\n",
+        "\n",
+        "word_lengths = [len(word) for word in words]\n",
+        "\n",
+        "print(word_lengths)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -111,12 +183,90 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "yRinYBhWbWah"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "分解された単語リスト:\n",
+            "1. It\n",
+            "2. is\n",
+            "3. not\n",
+            "4. the\n",
+            "5. strongest\n",
+            "6. of\n",
+            "7. the\n",
+            "8. species\n",
+            "9. that\n",
+            "10. survives\n",
+            "11. nor\n",
+            "12. the\n",
+            "13. most\n",
+            "14. intelligent\n",
+            "15. that\n",
+            "16. survives\n",
+            "17. It\n",
+            "18. is\n",
+            "19. the\n",
+            "20. one\n",
+            "21. that\n",
+            "22. is\n",
+            "23. most\n",
+            "24. adaptable\n",
+            "25. to\n",
+            "26. change\n",
+            "\n",
+            "指定された位置の単語:\n",
+            "1. It\n",
+            "2. is\n",
+            "5. strongest\n",
+            "6. of\n",
+            "8. species\n",
+            "9. that\n",
+            "16. survives\n",
+            "\n",
+            "結果の辞書:\n",
+            "{'It': 1, 'is': 2, 'st': 5, 'of': 6, 'sp': 8, 'th': 9, 'su': 16}\n"
+          ]
+        }
+      ],
+      "source": [
+        "import re\n",
+        "\n",
+        "sentence = \"It is not the strongest of the species that survives, nor the most intelligent that survives. It is the one that is most adaptable to change.\"\n",
+        "\n",
+        "cleaned_sentence = re.sub(r'[,.;:!?]', '', sentence)\n",
+        "\n",
+        "words = cleaned_sentence.split()\n",
+        "\n",
+        "print(\"分解された単語リスト:\")\n",
+        "for i, word in enumerate(words, 1):\n",
+        "    print(f\"{i}. {word}\")\n",
+        "\n",
+        "positions = [1, 2, 5, 6, 8, 9, 16]\n",
+        "\n",
+        "result_dict = {}\n",
+        "\n",
+        "for pos in positions:\n",
+        "    if pos <= len(words):\n",
+        "        word = words[pos-1]\n",
+        "        \n",
+        "        if len(word) >= 2:\n",
+        "            prefix = word[:2]\n",
+        "            result_dict[prefix] = pos\n",
+        "\n",
+        "print(\"\\n指定された位置の単語:\")\n",
+        "for pos in positions:\n",
+        "    if pos <= len(words):\n",
+        "        print(f\"{pos}. {words[pos-1]}\")\n",
+        "\n",
+        "print(\"\\n結果の辞書:\")\n",
+        "print(result_dict)"
+      ]
     }
   ],
   "metadata": {
@@ -124,11 +274,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
     }
   },
   "nbformat": 4,
